Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100363

[REG 6.2.2 - 6.2.3] Video is always black with OpenGL RHI

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 6.3.0 Beta2, 6.4.0 Beta1
    • 6.2.3
    • Multimedia
    • None
    • Windows 10
    • Windows
    • 8afe5d160c (qt/qtmultimedia/dev) 02e96fca6c (qt/qtmultimedia/6.3) eb47e12fd8 (qt/qtmultimedia/6.2) 1f9c392668 (qt/qtmultimedia/dev) dc879d2ad2 (qt/qtmultimedia/6.3) 14758a8ea3 (qt/qtmultimedia/6.2) 14758a8ea3 (qt/qtmultimedia/6.2.4)

      There is a regression from Qt 6.2.2 - video is not rendered at all (always black frames) when OpenGL RHI backend is used.

          QQuickWindow::setGraphicsApi(QSGRendererInterface::OpenGL);
      

      Most probably caused by https://codereview.qt-project.org/c/qt/qtmultimedia/+/383609.

      There are also runtime warnings during video playback

      Could not register D3D9 texture in OpenGL
      Texture from QVideoFrame is 0, this cannot be right
      Failed to initialize QRhiTexture wrapper for native texture object 0
      Could not register D3D9 texture in OpenGL
      Texture from QVideoFrame is 0, this cannot be right
      Failed to initialize QRhiTexture wrapper for native texture object 0
      Could not register D3D9 texture in OpenGL
      Texture from QVideoFrame is 0, this cannot be right
      Failed to initialize QRhiTexture wrapper for native texture object 0
      ...
      

      This is critical for apps that use QtWebEngineQuick because it hardcodes QSGRendererInterface::OpenGL internally.

        1. image-2022-02-01-11-21-35-436.png
          5 kB
          Vladimir Belyavsky
        2. untitled.zip
          2.00 MB
          Vladimir Belyavsky
        3. qtdiag.log
          9 kB
          Vladimir Belyavsky
        For Gerrit Dashboard: QTBUG-100363
        # Subject Branch Project Status CR V

            piotr Piotr Srebrny (Inactive)
            studiosus Vladimir Belyavsky
            Votes:
            2 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: