Fallback on map/upload texture if texture handle is invalid

There is no guarantee that QVideoFrame::textureHandle() will return
a valid texture handle. In some backend implementations texture handle
is generated after QVideoFrame is created in the mapTextures() call,
which may fail. In such case, fallback to QVideoFrame::NoHandle branch.

Fixes: QTBUG-100363
Change-Id: I0ae78b0abfa99af5e4579e454ea70711a8741178
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit 8afe5d160c5a58e79f518d7483561ffbcb67d4e5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>